# Marble-Trace

./: .gitattributes  .gitignore  .oxlintrc.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  index.html  lefthook.yml  oxlint.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.stories.json  vite.config.ts
.github/: filters.yml
.github/workflows/: artifact-comment.yml  codeql.yml  create-release.yml  pr-build.yml  pr-check.yml  pr-comment-preview.yml  pr-quality-check.yml  pr-quality-status.yml  release.yml  reusable-quality.yml
.storybook/: decorators.tsx  main.ts  preview.ts  preview.tsx
scripts/: bump-version.mjs  screenshot.bat  screenshot.mjs
site/: index.html  package-lock.json  package.json  vite.config.js
site/public/: robots.txt  sitemap.xml
site/src/: i18n.js  main.js  styles.css
src/: App.tsx  bindings.ts  i18n.ts  main.tsx  svg.d.ts
src-tauri/: .env.example  Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/pitwall-local/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  README.md
src-tauri/pitwall-local/src/: lib.rs  yaml_utils.rs
src-tauri/pitwall-local/src/ibt/: format.rs
src-tauri/pitwall-local/src/providers/: live.rs
src-tauri/pitwall-local/src/schema/: variables.rs
src-tauri/pitwall-local/src/schema/session/: cache.rs
src-tauri/pitwall-local/src/windows/: connection.rs
src-tauri/src/: capabilities.rs  commands.rs  iracing.rs  iracing_telemetry.rs  lib.rs  logging.rs  main.rs  telemetry_frame.rs  test_pitwall.rs  utils.rs
src-tauri/src/computations/: fuel.rs  lap_delta.rs  lap_log.rs  mod.rs  pit_stops.rs  proximity.rs  reference_lap.rs  relative.rs  standings.rs  track_shape.rs
src-tauri/src/iracing/: enums.rs  mod.rs  service.rs  weather_forecast.rs
src-tauri/src/iracing/frames/: car_dynamics.rs  car_idx.rs  car_inputs.rs  car_positions.rs  car_status.rs  chassis.rs  environment.rs  lap_timing.rs  mod.rs  session.rs
src-tauri/src/model/: capabilities.rs  cars.rs  enums.rs  environment.rs  flags.rs  lap_log.rs  mod.rs  player.rs  reference_lap.rs  relative.rs  session.rs  track_shape.rs
src-tauri/src/sources/: mod.rs  source.rs
src-tauri/src/sources/iracing/: flags.rs  frame_map.rs  mod.rs  session_parse.rs  source.rs  weather.rs
src-tauri/src/telemetry/: capabilities.rs  emitter.rs  mod.rs  runtime.rs  scheduler.rs  state.rs
src/hooks/: flags-hooks.ts  useAutoSizeWidget.ts  useIracingData.ts  usePitState.ts  useRadarVisibility.ts  useTelemetry.ts  useUnits.ts  useVisibleRowCount.ts  useWidgetTelemetry.ts
src/locales/: en.json  es.json  fr.json  ru.json
src/store/: app-settings.store.ts  flags.store.ts  index.ts  pit-stops.store.ts  root-store-context.ts  root-store.ts  sync.ts  telemetry.store.ts  units.store.ts  widget-auto-hide.store.ts  widget-defaults.ts  widget-settings.store.ts  window-manager.store.ts
src/storybook/: capture-snapshot.ts  compute-driver-entries.ts  define-widget-stories.tsx  proximity-types.ts  proximity-utils.ts  seed-from-snapshot.ts  snapshot.types.ts  test-data.ts  (+2 more)
test-data/: README.md  iracing-1776008424511.json  iracing-1778304799746.json  iracing-1780155523590.json  iracing-1782838490454.json  tracks.json
(+906 files in other folders)
