[package]
name = "marble-trace"
version = "0.4.1"
description = "Marble Trace - iRacing Telemetry Overlay"
authors = ["mvoof"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "marble_trace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
tauri = { version = "2.10", features = [] }
pitwall = { version = "0.1.0", features = ["derive", "tauri", "schema-discovery"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-mcp-bridge = "0.10"
specta = { version = "2.0.0-rc.22", features = ["derive"] }
specta-typescript = "0.0.9"
specta-serde = "0.0.9"
serde_yaml_ng = "0.10"

[patch.crates-io]
pitwall = { path = "./pitwall-local" }
